--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -13,8 +13,8 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter/0">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="RClientes/0">
+                <span class="oi oi-plus" aria-hidden="true"></span> Registro Clientes
             </NavLink>
         </li>
         <li class="nav-item px-3">
