--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -13,7 +13,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="RClientes/0">
+            <NavLink class="nav-link" href="Counter/0">
                 <span class="oi oi-plus" aria-hidden="true"></span> Registro Clientes
             </NavLink>
         </li>
