corrigiendo el codigo

--- a/Pages/Counter.razor
+++ b/Pages/Counter.razor
@@ -1,8 +1,8 @@
-﻿@page "/Counter/{ClienteId:int}"
+﻿@page "/Counter"
 @using Tarea3.DAL
 @using Tarea3.Data
 @using Tarea3.BLL
-<h1>Counter</h1>
+<h1>Registro Clientes:</h1>
 
 
     <EditForm Model="@Cliente" OnInvalidSubmit="Guardar">
